fix bug of components jump when address bar is auto hidden

--- a/src/components/cube.css
+++ b/src/components/cube.css
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   perspective: 99999px;
   transform-origin: bottom left;
 }
