--- a/src/components/loader.css
+++ b/src/components/loader.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
   will-change: transform;
   transform: translateZ(0);
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   fill: transparent;
-  stroke: powderblue;
+  /* stroke: powderblue; */
+  stroke: cyan;
   stroke-width: 10px;
 }
